--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,250 +1,255 @@
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
 }
 html,
 body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /*base site made around  360px */
 
 body {
-  /* change file here for different background image */
-  background-image: url(../assets/background.png);
-  background-size: cover;
-  font-family: "Press Start 2P", cursive;
+    /* change file here for different background image */
+    background-image: url(../assets/background.png);
+    background-size: cover;
+    font-family: 'Press Start 2P', cursive;
+}
+
+.audio {
+    position: relative;
+    text-align: center;
 }
 
 /* HEADER STYLES  */
 .main-header {
-  display: grid;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  justify-items: center;
-  text-align: center;
-  /* height: 5%; */
-  /* width: 100%; */
-  margin-bottom: 5%;
+    display: grid;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    justify-items: center;
+    text-align: center;
+    /* height: 5%; */
+    /* width: 100%; */
+    margin-bottom: 5%;
 }
 
 .main-header h1 {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .main-header div {
-  background: white;
-  padding-top: 5px;
-  padding-bottom: 5px;
+    background: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 /* styling for game board area */
 .game-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 95%;
-  width: 100%;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 95%;
+    width: 100%;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 
 /* styling for the over game board */
 .boardy {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -ms-flex-line-pack: center;
-  align-content: center;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  margin-top: 1%;
-  width: 100%;
-  height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 1%;
+    width: 100%;
+    height: 100%;
 }
 
 /* styling for individual images (imageCard) */
 .memtile {
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  width: 20%;
-  height: 20vw;
-  -webkit-transform: scale(20%);
-  transform: scale(20%);
-  margin: 1% 1%;
-  -webkit-transition: all 500ms ease-out;
-  transition: all 500ms ease-out;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    width: 20%;
+    height: 20vw;
+    -webkit-transform: scale(20%);
+    transform: scale(20%);
+    margin: 1% 1%;
+    -webkit-transition: all 500ms ease-out;
+    transition: all 500ms ease-out;
 }
 /* have the front/back fill the entire area of the card */
 .back,
 .front {
-  height: 100%;
-  width: 100%;
-  -webkit-box-shadow: -13px 11px 25px 1px rgba(0, 0, 0, 0.55);
-  box-shadow: -13px 11px 25px 1px rgba(0, 0, 0, 0.55);
-  border-radius: 10px;
-  position: absolute;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+    height: 100%;
+    width: 100%;
+    -webkit-box-shadow: -13px 11px 25px 1px rgba(0, 0, 0, 0.55);
+    box-shadow: -13px 11px 25px 1px rgba(0, 0, 0, 0.55);
+    border-radius: 10px;
+    position: absolute;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 .front {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url(../assets/tiles.png);
-  background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../assets/tiles.png);
+    background-size: cover;
 }
 
 .back {
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-  background-color: black;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+    background-color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 /* adds styling when an image is clicked */
 .clicked {
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 .paired .front {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 .modal {
-  color: black;
-  position: absolute;
-  left: 0;
-  top: 15%;
-  margin: 5%;
-  width: 90%;
-  height: 65%;
-  background-color: rgba(255, 255, 255, 1);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-  border-radius: 10px;
+    color: black;
+    position: absolute;
+    left: 0;
+    top: 15%;
+    margin: 5%;
+    width: 90%;
+    height: 65%;
+    background-color: rgba(255, 255, 255, 1);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+    border-radius: 10px;
 }
 .modalText {
-  top: 15%;
-  text-align: center;
+    top: 15%;
+    text-align: center;
 }
 
 .modal-hidden {
-  display: none;
-  -webkit-transform: scale(0.00001);
-  transform: scale(0.00001);
+    display: none;
+    -webkit-transform: scale(0.00001);
+    transform: scale(0.00001);
 }
 
 /* button styles for buttons */
 .button-styles {
-  border: none;
-  text-transform: uppercase;
-  background-image: url(../assets/buttonImg.png);
-  color: rgba(0, 0, 0, 1);
-  background-size: 100% 100%;
-  cursor: pointer;
-  margin: 10px;
-  padding: 10px;
-  outline: none;
-  position: relative;
+    border: none;
+    text-transform: uppercase;
+    background-image: url(../assets/buttonImg.png);
+    color: rgba(0, 0, 0, 1);
+    background-size: 100% 100%;
+    cursor: pointer;
+    margin: 10px;
+    padding: 10px;
+    outline: none;
+    position: relative;
 }
 
 button:hover {
-  color: white;
-  background: black;
+    color: white;
+    background: black;
 }
 
 /* ================================== */
 /* next media width styling */
 @media screen and (min-width: 360px) {
-  .main-header {
-    padding-bottom: 0;
-    margin-bottom: 0;
-  }
+    .main-header {
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
 
-  .boardy {
-    display: grid;
-    align-content: flex-start;
-  }
+    .boardy {
+        display: grid;
+        align-content: flex-start;
+    }
 
-  .boardy::before {
-    content: "";
-    width: 0;
-    padding-bottom: 90%;
-    grid-row: 8 / 8;
-    grid-column: 4/ 4;
-  }
+    .boardy::before {
+        content: '';
+        width: 0;
+        padding-bottom: 90%;
+        grid-row: 8 / 8;
+        grid-column: 4/ 4;
+    }
 
-  .memtile {
-    width: 4.5rem;
-    height: 4.5rem;
-  }
+    .memtile {
+        width: 4.5rem;
+        height: 4.5rem;
+    }
 
-  .button-styles {
-    width: 40%;
-  }
+    .button-styles {
+        width: 40%;
+    }
 }
 
 /* ================================== */
 /* next media width styling */
 @media screen and (min-width: 768px) {
-  .game-box {
-    height: auto;
-    align-content: center;
-  }
+    .game-box {
+        height: auto;
+        align-content: center;
+    }
 
-  .memtile {
-    width: 5.5rem;
-    height: 5.5rem;
-  }
+    .memtile {
+        width: 5.5rem;
+        height: 5.5rem;
+    }
 
-  .button-styles {
-    width: 25%;
-  }
+    .button-styles {
+        width: 25%;
+    }
 }
 /* ================================== */
 /* next media width styling */
 @media screen and (min-width: 1200px) {
-  .button-styles {
-    font-size: large;
-  }
-  .memtile {
-    width: 6rem;
-    height: 6rem;
-  }
+    .button-styles {
+        font-size: large;
+    }
+    .memtile {
+        width: 6rem;
+        height: 6rem;
+    }
 }
